--- a/pages/index.html
+++ b/pages/index.html
@@ -6,151 +6,250 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Paws | Pets Online Store in Pakistan</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-    <link rel="stylesheet" href="/assets/bootstarp/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles.css">
-<!--    <link rel="stylesheet" href="/assets/css/mobile.css">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="../assets/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <!--    <link rel="stylesheet" href="/assets/css/mobile.css">-->
 
 </head>
 
 <body>
-<!-- Topbar  -->
-<!-- Social medai links  -->
-<div class="container mt-3">
-    <div class="row">
-        <div class="col-md-4  fs-5">
-            Follow Us:
-            <i class="fa-brands fa-facebook-square ps-2"></i>
-            <i class="fa-brands fa-twitter-square ps-2"></i>
-            <i class="fa-brands fa-pinterest-square ps-2"></i>
-            <i class="fa-brands fa-instagram-square ps-2"></i>
-        </div>
-
-        <!-- topbar buttons  -->
-        <div class="col-md-8">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                <button class="btn btn-danger me-md-2" type="button">Register</button>
-                <button class="btn btn-dark" type="button">Log In</button>
+<header class="w-100">
+    <div class="container">
+        <div class="top-header d-flex justify-content-between">
+            <div class="top-header-left">
+                <div class="social-list-box d-flex align-items-center mr-auto">
+                    <span>Follow Us</span>
+                    <ul class="social-list d-flex align-items-center ml-3 list-unstyled mb-0">
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="top-header-right d-flex align-items-center justify-content-end">
+                <div class="cart-box">
+                    <ul class="list-unstyled mb-0 mr-4">
+                        <li class="cart-main">
+                            <a href="#">
+                                <img src="../assets/images/cart-basket-icon-red.svg" alt="cart image">
+                                <span>0 - Item</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#" class="btn btn-sm btn-outline-primary text-uppercase mr-3">Register</a>
+                <a href="#" class="btn btn-sm btn-secondary text-uppercase">Login</a>
             </div>
         </div>
     </div>
-</div>
-<hr>
-<!-- Navbar  -->
-<div class="container">
-    <div class="row ">
-        <div class="col-md-4 ">
-            <a href="Home.html"><img class="img-fluid logo-img"  src="images/logo.png" alt="logo"  height="80px"
-                                     width="120px";></a>
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container">
+            <a class="navbar-brand d-inline-block mr-4" href="#">
+                <img src="../assets/images/logo.png" alt="logo">
+            </a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#">HOME </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">PETS AND VETS </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">BUY/SELL </a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">CONTACT </a></li>
+                </ul>
+            </div>
+            <a class="btn-add-pet d-flex align-items-center text-uppercase animated fadeInRight" href="#">
+                <div class="add-text">Add Pet</div>
+                <div class="icon-box position-relative text-center">
+                    <i class="fa fa-plus"></i>
+                </div>
+            </a>
         </div>
-        <div class="col-md-8 navbar-margin">
-            <ul class="nav text-danger ">
-                <li class="nav-item ">
-                    <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Pets & Vets.html">Pets & Vets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="buy-sell.html">Buy/sell</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="About us.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contact us.html">Contact Us</a>
-                </li>
-                <li class="nav-item " style="margin-top: -28px;">
-                    <!-- <a class="nav-link" href="Add pet.html">+Add Pet<img src="images/download.jpg" alt="add pet image" height="80px" width="90px"> </a> -->
-                </li>
+    </nav>
+</header>
 
-            </ul>
+<!--    carousel -->
+<section class="hero-section">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="../assets/images/pet-engage.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../assets/images/Inkedeshop_LI.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../assets/images/Inkedpet-relocate_LI.jpg" alt="Third slide">
+            </div>
         </div>
-
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-</div>
-<hr>
-<!-- Carousels  -->
-<div class="container-fluid ">
-    <div class="row">
-        <div class="col-md-12">
+</section>
 
-            <div class="container-fluid mt-2">
+<section class="red-boxes-section w-100 d-flex">
+    <a class="r-box" href="#">
+        <div class="icon-box">
+            <img src="img/buy-sell-icon.svg" alt="Buy Sell">
+        </div>
+        <div class="text-box">
+            <h5 class="r-box-title">Pet Buy / Sell</h5>
+            <p class="r-box-desc">Buying and selling of pets made easy... <br>
+                <b class="text-uppercase">Find out more..</b>
+            </p>
+        </div>
+    </a>
+    <a class="r-box" href="#">
+        <div class="icon-box">
+            <img src="img/buy-sell-icon.svg" alt="Buy Sell">
+        </div>
+        <div class="text-box">
+            <h5 class="r-box-title">Pet Buy / Sell</h5>
+            <p class="r-box-desc">Buying and selling of pets made easy... <br>
+                <b class="text-uppercase">Find out more..</b>
+            </p>
+        </div>
+    </a>
+    <a class="r-box" href="#">
+        <div class="icon-box">
+            <img src="img/buy-sell-icon.svg" alt="Buy Sell">
+        </div>
+        <div class="text-box">
+            <h5 class="r-box-title">Pet Buy / Sell</h5>
+            <p class="r-box-desc">Buying and selling of pets made easy... <br>
+                <b class="text-uppercase">Find out more..</b>
+            </p>
+        </div>
+    </a>
+    <a class="r-box" href="#">
+        <div class="icon-box">
+            <img src="img/buy-sell-icon.svg" alt="Buy Sell">
+        </div>
+        <div class="text-box">
+            <h5 class="r-box-title">Pet Buy / Sell</h5>
+            <p class="r-box-desc">Buying and selling of pets made easy... <br>
+                <b class="text-uppercase">Find out more..</b>
+            </p>
+        </div>
+    </a>
+</section>
+
+<section class="search-pet-section">
+    <div class="container">
+        <div class="bg-box">
+            <h3 class="form-title">
+                <b>3783 Pets</b> to choose from
+            </h3>
+            <form>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div
-                                id="mycarousel"
-                                class="carousel slide carousel-dark carousel-fade"
-                                data-bs-ride="carousel"
-                        >
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="2"></li>
-                                <li data-bs-target="#mycarousel" data-bs-slide-to="3"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/carousel img 7.jpg" class="d-block w-100" alt="image" />
-                                    <div class="carousel-caption">
-                                        <h2 class="mt-3">Latest Collection</h2>
-
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/pet-engage.jpg" class="d-block w-100" alt="dog image" />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/Inkedeshop_LI.jpg" class="d-block w-100" alt="pet img" />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/Inkedpet-relocate_LI.jpg" class="d-block w-100" alt="pet img" />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/Inkedpet-relocate_LI.jpg" class="d-block w-100" alt="pet img" />
-                                </div>
-
-                            </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="form-group has-float-label not-float">
+                            <select name="city" class="form-control">
+                                <option value=""></option>
+                                <option value="Lahore">Lahore</option>
+                                <option value="Islamabad">Islamabad</option>
+                                <option value="Karachi">Karachi</option>
+                                <option value="Peshawar">Peshawar</option>
+                                <option value="Faislabad">Faislabad</option>
+                            </select>
                         </div>
-
-                        <a
-                                href="#mycarousel"
-                                data-bs-slide="prev"
-                                class="carousel-control-prev"
-                        >
-                            <span class="carousel-control-prev-icon"></span>
-                        </a>
-                        <a
-                                href="#mycarousel"
-                                data-bs-slide="next"
-                                class="carousel-control-next"
-                        >
-                            <span class="carousel-control-next-icon"></span>
-                        </a>
                     </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="form-group has-float-label not-float">
+                            <select name="city" class="form-control">
+                                <option value=""></option>
+                                <option value="Lahore">Lahore</option>
+                                <option value="Islamabad">Islamabad</option>
+                                <option value="Karachi">Karachi</option>
+                                <option value="Peshawar">Peshawar</option>
+                                <option value="Faislabad">Faislabad</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="form-group has-float-label not-float">
+                            <select name="city" class="form-control">
+                                <option value=""></option>
+                                <option value="Lahore">Lahore</option>
+                                <option value="Islamabad">Islamabad</option>
+                                <option value="Karachi">Karachi</option>
+                                <option value="Peshawar">Peshawar</option>
+                                <option value="Faislabad">Faislabad</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="form-group has-float-label not-float">
+                            <select name="city" class="form-control">
+                                <option value=""></option>
+                                <option value="Lahore">Lahore</option>
+                                <option value="Islamabad">Islamabad</option>
+                                <option value="Karachi">Karachi</option>
+                                <option value="Peshawar">Peshawar</option>
+                                <option value="Faislabad">Faislabad</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group text-center checkboxes mb-0">
+                            <label class="custom-checkbox position-relative text-uppercase">
+                                <input type="radio" name="pet_for" value="Sell" checked="checked">
+                                <span class="checkmark"></span>
+                                <span class="text">Buy</span>
+                            </label>
+                            <label class="custom-checkbox">
+                                <input type="radio" name="pet_for" value="Engage">
+                                <span class="checkmark"></span>
+                                <span class="text">Engage</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="text-center col-12">
+                        <button class="search-btn btn-primary custom-search-button wow shake" data-wow-delay="1s">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
+
+<section class="relocate-pet-section">
+    <div class="container">
+        <h2 class="relocate-section-title">
+            Relocate
+            <small>Your Pet Easily!</small>
+        </h2>
+        <form class="relocate-form-box">
+            <input type="hidden" name="_token" value="7SZSOmqJN1VyiDFLMCuYfWWnyNZ5RINsQaswVuZl">
+            <div class="row">
+                <button class="btn btn-primary wow fadeInRight get_quote_btn"
+                        style="padding-left: 40px; padding-right: 40px; visibility: visible; animation-name: fadeInRight;"
+                        name="request_type"
+                        type="submit"
+                        value="1"
+                >Get a quote</button>
+            </div>
+        </form>
+    </div>
+</section>
+
+<section class="featured-pets-section">
+    <div class="container">
+        <div class="paw-title-box d-block text-center position-relative mb-3">
+            <div class="paw-title position-relative d-inline-block">
+                Featured Pets
+                <div class="icon-box">
+<!--                    <img src="../assets/images/dog-paw.png" alt="img" width="926" height="920" />-->
                 </div>
             </div>
         </div>
-
     </div>
-</div>
+</section>
 
-
-</div>
-</div>
-</div>
-<hr>
-
-
-
-
-
-
-
-
-
-
-
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/custom.js"></script>
 </body>
 </html>
