--- a/pages/index.html
+++ b/pages/index.html
@@ -42,26 +42,26 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-sm btn-outline-primary text-uppercase mr-3">Register</a>
+                    <a href="#" class="btn btn-sm btn-secondary text-uppercase mr-3">Register</a>
                     <a href="#" class="btn btn-sm btn-secondary text-uppercase">Login</a>
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg bg-white">
+        <nav class="navbar navbar-expand-lg bg-warning  font-weight-bold">
             <div class="container">
                 <a class="navbar-brand d-inline-block mr-4" href="#">
                     <img src="../assets/images/logo.png" alt="logo">
                 </a>
                 <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav ml-auto mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">HOME </a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">PETS AND VETS </a></li>
+                    <ul class="navbar-nav ml-auto mr-auto mt-2 mt-lg-0 ">
+                        <li class="nav-item"><a class="nav-link" href="/pages/index.html">HOME </a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/pets-vets.html">PETS AND VETS </a></li>
                         <li class="nav-item"><a class="nav-link" href="#">BUY/SELL </a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTACT </a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pages/contact-us.html">CONTACT </a></li>
                     </ul>
                 </div>
                 <a class="btn-add-pet d-flex text-decoration-none align-items-center text-uppercase animated fadeInRight"
-                    href="#">
+                    href="./add-pet.html">
                     <div class="add-text">Add Pet</div>
                     <div class="icon-box position-relative text-center">
                         <i class="fa fa-plus"></i>
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="red-boxes-section w-100 d-flex">
+    <section class="red-boxes-section w-100 d-flex mt-1">
         <a class="r-box text-decoration-none" href="#">
             <div class="icon-box">
                 <img src="img/buy-sell-icon.svg" alt="Buy Sell">
@@ -684,7 +684,7 @@
             </div>
         </div>
     </section>
-
+<!-- Footer  -->
     <footer class="footer">
         <div class="container">
             <div class="row">
