--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,8 @@
     <title>Happy Paws | Pets Online Store in Pakistan</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="../assets/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/slick/slick-theme.css" />
+<!--    <link rel="stylesheet" type="text/css" href="../assets/slick/slick.css" />-->
+<!--    <link rel="stylesheet" type="text/css" href="../assets/slick/slick-theme.css" />-->
     <link rel="stylesheet" href="../assets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <!--    <link rel="stylesheet" href="/assets/css/mobile.css">-->
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="red-boxes-section w-100 d-flex mt-1">
+    <section class="red-boxes-section w-100 d-flex">
         <a class="r-box text-decoration-none" href="#">
             <div class="icon-box">
                 <img src="img/buy-sell-icon.svg" alt="Buy Sell">
@@ -297,8 +297,8 @@
                 <div class="col-md-6">
                     <a href="#" class="categories-card bg-dark text-white categoies-banner-card bg-pet-home">
                         <img src="../assets/images/pet-food-img2.png" alt="Pet food" class="category-icon">
-                        <div class="card-img-overlay">
-                            <div class="cio-inner">
+                        <div class="card-img-overlay d-flex align-items-center">
+                            <div class="cio-inner overflow-hidden">
                                 <h5 class="card-title">Pet Food</h5>
                                 <p class="card-text">Organic and Dry Pet Food.</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
@@ -309,8 +309,8 @@
                 <div class="col-md-6">
                     <a href="#" class="categories-card bg-dark text-white categoies-banner-card bg-best-food">
                         <img src="../assets/images/pet-collor2.png" alt="Pet food" class="category-icon">
-                        <div class="card-img-overlay">
-                            <div class="cio-inner">
+                        <div class="card-img-overlay d-flex align-items-center">
+                            <div class="cio-inner overflow-hidden">
                                 <h5 class="card-title">Pet Accessories</h5>
                                 <p class="card-text">Pet Toys, pet supplies and pet accessories</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
@@ -323,7 +323,7 @@
                         <img src="../assets/images/dog-sitting2.png" alt="Pet food" class="category-icon">
                         <div class="card-img-overlay">
                             <div class="cio-inner">
-                                <h5 class="card-title">Pet Accessories</h5>
+                                <h5 class="card-title">DOG</h5>
                                 <p class="card-text">Pet Toys, pet supplies and pet accessories</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
                             </div>
@@ -335,7 +335,7 @@
                         <img src="../assets/images/cat-sitting2.png" alt="Pet food" class="category-icon">
                         <div class="card-img-overlay">
                             <div class="cio-inner">
-                                <h5 class="card-title">Pet Accessories</h5>
+                                <h5 class="card-title">CAT</h5>
                                 <p class="card-text">Pet Toys, pet supplies and pet accessories</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
                             </div>
@@ -347,7 +347,7 @@
                         <img src="../assets/images/bird-flying2.png" alt="Pet food" class="category-icon">
                         <div class="card-img-overlay">
                             <div class="cio-inner">
-                                <h5 class="card-title">Pet Accessories</h5>
+                                <h5 class="card-title">BIRD</h5>
                                 <p class="card-text">Pet Toys, pet supplies and pet accessories</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
                             </div>
@@ -359,7 +359,7 @@
                         <img src="../assets/images/fish3.png" alt="Pet food" class="category-icon">
                         <div class="card-img-overlay">
                             <div class="cio-inner">
-                                <h5 class="card-title">Pet Accessories</h5>
+                                <h5 class="card-title">Fish</h5>
                                 <p class="card-text">Pet Toys, pet supplies and pet accessories</p>
                                 <img src="../assets/images/arrow-icon.svg" alt="Arrow">
                             </div>
@@ -861,7 +861,6 @@
                         <li>
                             <a href="https://www.agentpet.com/pet-search?city=Rawalpindi">Pets in Rawalpindi</a>
                         </li>
-
                     </ul>
                     <h5 class="section-title list-title">Pets by Color</h5>
                     <ul class="menu-list list-unstyled">
