--- a/pages/add-pet.html
+++ b/pages/add-pet.html
@@ -73,30 +73,30 @@
     </header>
 
     <!-- Sign up form  -->
-    <div class="container">
+    <div class="container form-container">
         <div class="row">
             <div class="col-sm">
                 <div class="signup">
                     <div class="signup-connect">
                       <h1>Create your account</h1>
-                      <a href="#" class="btn btn-social btn-facebook"><i class="fa fa-facebook"></i> Sign in with Facebook</a>
-                      <a href="#" class="btn btn-social btn-twitter"><i class="fa fa-twitter"></i> Sign in with Twitter</a>
-                      <a href="#" class="btn btn-social btn-google"><i class="fa fa-google"></i> Sign in with Google</a>
-                      <a href="#" class="btn btn-social btn-linkedin"><i class="fa fa-linkedin"></i> Sign in with Linkedin</a>
+                      <a href="#" class="button button-social button-facebook"><i class="fa fa-facebook"></i> Sign in with Facebook</a>
+                      <a href="#" class="button button-social button-twitter"><i class="fa fa-twitter"></i> Sign in with Twitter</a>
+                      <a href="#" class="button button-social button-google"><i class="fa fa-google"></i> Sign in with Google</a>
+                      <a href="#" class="button button-social button-linkedin"><i class="fa fa-linkedin"></i> Sign in with Linkedin</a>
                     </div>
                     <div class="signup-classic">
                       <h2>Or use the classical way</h2>
-                      <form class="form">
+                      <form class="signup-form">
                         <fieldset class="username">
-                          <input type="text" placeholder="username" />
+                          <input type="text" placeholder="username"/>
                         </fieldset>
                         <fieldset class="email">
-                          <input type="email" placeholder="email" />
+                          <input type="email" placeholder="email"/>
                         </fieldset>
                         <fieldset class="password">
                           <input type="password" placeholder="password" />
                         </fieldset>
-                        <button type="submit" class="btn">sign up</button>
+                        <button type="submit" class="button button-submit">sign up</button>
                       </form>
                     </div>
                   </div>
@@ -104,6 +104,287 @@
         </div>
     </div>
 
+<!-- Footer  -->
+<footer class="footer  margintop-footer">
+    <div class="container  ">
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="logo-box">
+                    <img src="https://www.agentpet.com/img/agent-pet-logo-white.png" alt="Agentpet"
+                        class="img-fluid">
+                </div>
+                <p>Based globally AgentPet.com is one of the reputable and devoted website that offers genuine
+                    services for your beloved pets.</p>
+            </div>
+            <div class="col-md-6 col-lg-5">
+                <form action="https://www.agentpet.com/subscribe" method="post" class="mt-4">
+                    <input type="hidden" name="_token">
+                    <div class="footer-input-group input-group mb-3">
+                        <input type="email" class="form-control"
+                            pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" name="email"
+                            required="required" placeholder="Email Address" aria-label="Email Address">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-white" type="submit">Subscribe</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-12 col-lg-3">
+                <div class="social-list-box mt-4">
+                    <span class="mr-2" style="font-weight: 600;">Follow Us:</span>
+                    <ul class="footer-social-list list-inline">
+                        <li>
+                            <a target="_blank" href="https://twitter.com/agentpetdotcom/">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.facebook.com/agentpetpakistan/">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.instagram.com/officialagentpet/">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.pinterest.com/agentpet/pins/">
+                                <i class="fab fa-pinterest-p"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h5 class="section-title list-title">Pets for Sale in PAKISTAN</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/dogs/pakistan">Dog for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cats/pakistan">Cat for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fishes/pakistan">Fishes for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/birds/pakistan">Birds for Sale</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Dogs for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/dogs/lahore">Dogs for Sale in Lahore</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/dogs/karachi">Dogs for Sale in Karachi</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/dogs/islamabad">Dogs for Sale in Islamabad</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/dogs/rawalpindi">Dogs for Sale in Rawalpindi</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Cats for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/cats/lahore">Cats for Sale in Lahore</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cats/karachi">Cats for Sale in Karachi</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cats/islamabad">Cats for Sale in Islamabad</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cats/rawalpindi">Cats for Sale in Rawalpindi</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5 class="section-title list-title">Birds for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/birds/lahore">Birds for Sale in Lahore</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/birds/karachi">Birds for Sale in Karachi</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/birds/islamabad">Birds for Sale in Islamabad</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/birds/rawalpindi">Birds for Sale in Rawalpindi</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Fishes for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/fishes/lahore">Fishes for Sale in Lahore</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fishes/karachi">Fishes for Sale in Karachi</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fishes/islamabad">Fishes for Sale in Islamabad</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fishes/rawalpindi">Fishes for Sale in Rawalpindi</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Pet Food for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/dog-food">Dog Food for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cat-food">Cat Food for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/bird-food">Bird Food for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fish-food">Fish Food for Sale</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h5 class="section-title list-title">Pet ACCESSORIES for Sale</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/dog-accessories">Dog Accessories for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/cat-accessories">Cat Accessories for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/bird-accessories">Bird Accessories for Sale</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/fish-accessories">Fish Accessories for Sale</a>
+                    </li>
+
+                </ul>
+                <h5 class="section-title list-title">Pets by City</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/pet-search?city=Lahore">Pets in Lahore</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/pet-search?city=Karachi">Pets in Karachi</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/pet-search?city=Islamabad">Pets in Islamabad</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/pet-search?city=Rawalpindi">Pets in Rawalpindi</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Pets by Color</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/white-pets">White Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/black-pets">Black Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/brown-pets">Brown Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/grey-pets">Grey Pets</a>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="col-md-3">
+
+                <h5 class="section-title list-title">Pets by Temperament</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/protective-pets">Protective Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/playful-pets">Playful Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/affectionate-pets">Affectionate Pets</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/gentle-pets">Gentle Pets</a>
+                    </li>
+                </ul>
+                <h5 class="section-title list-title">Pets BY Compatibility</h5>
+                <ul class="menu-list list-unstyled">
+                    <li>
+                        <a href="https://www.agentpet.com/okay-with-kids">Okay With Kids</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/okay-with-dogs">Okay With Dogs</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/okay-with-cats">Okay With Cats</a>
+                    </li>
+                    <li>
+                        <a href="https://www.agentpet.com/okay-with-appartments">Okay With Apartments</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-3">
+                <small class="small-font">Member of</small>
+                <div class="logos-box">
+                    <figure>
+                        <img src="https://www.agentpet.com/img/ata.jpg" alt="ATA" class="img-fluid">
+                    </figure>
+                    <figure>
+                        <img src="https://www.agentpet.com/img/pan.jpg" alt="PAN" class="img-fluid">
+                    </figure>
+                </div>
+            </div>
+            <div class="col-md-3">
+
+                <div class="logos-box">
+                    <a href="https://apps.apple.com/gb/app/agentpet/id1533453500" target="_blank">
+                        <img src="https://www.agentpet.com/img/appstore.png" alt="ATA" class="img-fluid" style="
+                        width: 200px;
+                        margin-bottom: 20px;
+                    ">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=com.mark.agent_pet" target="_blank">
+                        <img src="https://www.agentpet.com/img/play.png" alt="PAN" class="img-fluid" style="
+                    width: 200px;
+                    margin-bottom: 10px;
+                ">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="copyright-box">
+                    <ul class="list-unstyled small-link-list">
+                        <li class="nav-item ">
+                            <a href="https://www.agentpet.com/about-us">About Us</a>
+                        </li>
+                        <li>
+                            <a href="https://www.agentpet.com/privacy">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="https://www.agentpet.com/terms">Terms of use</a>
+                        </li>
+                        <li>
+                            <a href="https://www.agentpet.com/contact-us">Contact</a>
+                        </li>
+                    </ul>
+                    <p class="copyright-text">© 2022 AGENTPET. All rights reserved. <a target="_blank"
+                            href="http://www.nextbridge.pk/">Powered by Nextbridge.</a></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
 
 
