--- a/pages/buy-sell.html
+++ b/pages/buy-sell.html
@@ -369,6 +369,43 @@
       </label>
      </div>
        <br>
+       <h6 class="text-uppercase">Compatibility</h6>
+       <div class="form-group checkboxes">
+        <label class="custom-checkbox dark">
+            <input type="checkbox" name="okay_with_kids" value="1">
+                   <span class="checkmark"></span>
+            <span class="text">Okay With Kids</span>
+        </label>
+    </div>
+    <div class="form-group checkboxes">
+        <label class="custom-checkbox dark">
+            <input type="checkbox" name="okay_with_dogs" value="1">
+                   <span class="checkmark"></span>
+            <span class="text">Okay With Dogs</span>
+        </label>
+    </div>
+    <div class="form-group checkboxes">
+        <label class="custom-checkbox dark">
+            <input type="checkbox" name="okay_with_cats" value="1">
+                   <span class="checkmark"></span>
+            <span class="text">Okay With Cats</span>
+        </label>
+    </div>
+    <div class="form-group checkboxes">
+        <label class="custom-checkbox dark">
+            <input type="checkbox" name="okay_with_appartments" value="1">
+                   <span class="checkmark"></span>
+            <span class="text">Okay With Apartments</span>
+        </label>
+    </div>
+    <div class="form-group checkboxes">
+        <label class="custom-checkbox dark">
+            <input type="checkbox" name="okay_with_seniors" value="1">
+                   <span class="checkmark"></span>
+            <span class="text">Okay With Seniors</span>
+        </label>
+    </div>
+    <br>
     <h6 class="text-uppercase">Energy</h6>
     <div class="form-group checkboxes">
      <label class="custom-checkbox dark">
@@ -1293,6 +1330,8 @@ Updated February 18,2022
 <li class="page-item"><a class="page-link" href="https://www.agentpet.com/pet-list?page=5">5</a></li>
 <li class="page-item disabled" aria-disabled="true"><span class="page-link">...</span></li>
 <li class="page-item"><a class="page-link" href="https://www.agentpet.com/pet-list?page=10">10</a></li>
+<li class="page-item"><a class="page-link" href="https://www.agentpet.com/pet-list?page=11">11</a></li>
+<li class="page-item"><a class="page-link" href="https://www.agentpet.com/pet-list?page=12">12</a></li>
 <li class="page-item">
     <a class="page-link" href="https://www.agentpet.com/pet-list?page=2" rel="next" aria-label="Next »">›</a>
 </li>
